[package]
name = "regulator"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.18"         # 用于创建图形界面
tokio = { version = "1", features = ["full"] }  # 异步运行时，支持TCP监听等
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio-rustls"] }
sqlx-macros = "0.8"
syn = { version = "1.0", features = ["parsing"] }
quote = "1.0"
dotenv = "0.15"