[package]
name = "my_project"
version = "0.1.0"
edition = "2021"

[features]
default = ["curv-kzen/rust-gmp-kzen"]
cclst = ["class_group"]

[dependencies]
eframe = "0.29.1"  # 确保使用最新版本
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rusb = "0.9"  # 添加 rusb 作为 USB 通信库
subtle = { version = "2" }
zeroize = "1"
curv-kzen = { version = "0.10.0", default-features = false }
centipede = { version = "0.3", default-features = false }
zk-paillier = { version = "0.4.3", default-features = false }
round-based = { version = "0.1.4", features = [] }
thiserror = "1.0.23"
derivative = "2"
sha2 = "0.9"

secp256k1 = { version = "0.20", features = ["global-context"] }

[dependencies.paillier]
version = "0.4.2"
package = "kzen-paillier"
default-features = false

[dependencies.class_group]
version = "0.6"
default-features = false
optional = true

[dev-dependencies]
criterion = "0.3"
aes-gcm = "0.9.4"
hex = "0.4"
tokio = { version = "1", default-features = false, features = ["macros"] }
futures = "0.3"
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
reqwest = { version = "0.9", default-features = false }
uuid = { version = "0.8", features = ["v4"] }
serde_json = "1.0"
rand = "0.8"
surf = "2"
async-sse = "5"

structopt = "0.3"
secp256k1 = { version = "0.20", features = ["global-context"]}

thiserror = "1.0.23"
round-based = { version = "0.1.4", features = ["dev"] }